yamls/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rick-and-morty-deployment
  labels:
    app: rick-and-morty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rick-and-morty
  template:
    metadata:
      labels:
        app: rick-and-morty
    spec:
      containers:
        - name: rick-and-morty-container
          image: rick-and-morty-app:latest
          ports:
            - containerPort: 5000
