yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-and-morty-service
  labels:
    app: rick-and-morty
spec:
  selector:
    app: rick-and-morty
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
