yamls/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rick-and-morty-ingress
  labels:
    app: rick-and-morty
spec:
  rules:
    - host: rick.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: rick-and-morty-service
                port:
                  number: 80
